# rem-api-sys

./: .gitignore  .gitmodules  README.md  build.rs
crates/app/: Cargo.toml
crates/base/src/: state.rs
crates/examples/: Cargo.toml  ctp_query.rs
crates/localctp-sys/: Cargo.toml  README.md  build.rs
crates/localctp-sys/build_utils/handlers/: config.rs  handle_function_parameter.rs  handle_function_prototype.rs
crates/localctp-sys/build_utils/handlers/handle_param/: pointer.rs  typedef.rs
crates/localctp-sys/build_utils/handlers/handle_record/: mod.rs
crates/localctp-sys/src/: lib.rs  trade_impl.rs
crates/localctp-sys/tests/: api_version.rs
crates/rem-super-api-sys/: build.rs
crates/rem-super-api-sys/build_utils/handlers/: handle_function_parameter.rs  handle_function_prototype.rs  mod.rs
crates/rem-super-api-sys/build_utils/handlers/handle_param/: mod.rs  param_flavor.rs
crates/rem-super-api-sys/build_utils/handlers/handle_record/: api.rs  spi.rs
crates/rem-super-api-sys/src/: ffi_utils.rs
crates/rust-share-util/: Cargo.toml
crates/spider/src/: lib.rs
scripts/: build_localctp.sh
