[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
localctp-sys = { path = "../localctp-sys" }
futures = "0.3.5"
bincode = { version = "2.0.0-rc.2", features = ["derive"] }
chrono = "0.4"
clap = { version = "3.2.6", features = ["derive"] }
serde_json = {version = "1"}
serde ={ version = "1"}
rand = "0.8"

[[example]]
name = "ctp_query"
path = "ctp_query.rs"
